crates/nash-codegen/src/silent/snapshots/nash_codegen__silent__tests__core_trace_failing_message.snap
---
source: crates/nash-codegen/src/silent/tests.rs
description: Hand-built Core
---
--- unoptimized Core
trace error in 42
--- unoptimized UPLC
(program 1.1.0
  (force [[(force (builtin trace)) (error)] (delay (con integer 42))]))
--- optimized Core (O2)
42
--- optimized UPLC (O2)
(program 1.1.0 (con integer 42))
--- O0 result
error: ExplicitErrorTerm
--- O0 logs
[]
--- O2 result
(con integer 42)
--- O2 logs
[]
